--- a/firstProject/css/style.css
+++ b/firstProject/css/style.css
@@ -28,73 +28,6 @@ button:hover {
   margin: 0 auto;
 }
 
-.header {
-  position: fixed;
-  top: 0px;
-  padding: 30px 0 25px;
-  width: 100%;
-  border-bottom: 2px solid rgb(203, 203, 203);
-  background-color: rgb(243, 243, 243);
-  z-index: 9999;
-}
-
-.header__inner {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-}
-
-.header__logo {
-  font-weight: 600;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-.logo-text {
-  padding-left: 11px;
-  font-size: 21px;
-  color: rgb(108, 95, 188);
-}
-
-.header__navigation {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  margin-right: auto;
-  margin-left: 105px;
-  margin-right: 445px;
-}
-
-.header__link {
-  color: inherit;
-  text-decoration: none;
-}
-
-.navigation_buttons {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  gap: 30px;
-  color: rgb(96, 96, 96);
-  list-style-type: none;
-  font-size: 18px;
-  padding-left: 30px;
-}
-
 .purpleButton {
   background-color: rgb(108, 95, 188);
   color: rgb(249, 249, 249);
@@ -114,11 +47,85 @@ button:hover {
   border: 1.5px solid rgb(108, 95, 188);
 }
 
+.healthy {
+  background-color: rgb(255, 236, 187);
+  color: rgb(218, 163, 26);
+}
+
+.trending {
+  background-color: rgb(255, 181, 164);
+  color: rgb(251, 71, 29);
+}
+
+purple {
+  color: rgb(92, 78, 174);
+}
+
+.header {
+  position: fixed;
+  top: 0px;
+  padding: 30px 0 25px;
+  width: 100%;
+  border-bottom: 2px solid rgb(203, 203, 203);
+  background-color: rgb(243, 243, 243);
+  z-index: 9999;
+}
+.header__inner {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+.header__logo {
+  font-weight: 600;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+.header__logo-text {
+  padding-left: 11px;
+  font-size: 21px;
+  color: rgb(108, 95, 188);
+}
+.header__navigation {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-right: auto;
+  margin-left: 105px;
+  margin-right: 445px;
+}
+.header__navigation-buttons {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  gap: 30px;
+  color: rgb(96, 96, 96);
+  list-style-type: none;
+  font-size: 18px;
+  padding-left: 30px;
+}
+.header__link {
+  color: inherit;
+  text-decoration: none;
+}
+
 .application {
   padding-top: 100px;
 }
-
-.section__inner {
+.application__inner {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -129,8 +136,7 @@ button:hover {
           align-items: center;
   margin-top: 116px;
 }
-
-.box_left {
+.application__left {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -140,22 +146,19 @@ button:hover {
           flex-direction: column;
   gap: 50px;
 }
-
-.left_user {
+.application__left-title {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
 }
-
-.user_text {
+.application__left-text {
   color: rgba(32, 31, 31, 0.2);
   font-weight: 600;
   font-size: 15px;
   line-height: 18px;
   letter-spacing: 2px;
 }
-
-.left_content {
+.application__left-content {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -166,85 +169,85 @@ button:hover {
   gap: 16px;
   max-width: 567px;
 }
-
-.content_title {
+.application__left-heading {
   font-weight: 600;
   font-size: 75px;
   line-height: 90px;
   letter-spacing: -3px;
 }
-
-purple {
-  color: rgb(92, 78, 174);
-}
-
-.content_subtitle {
+.application__left-subtitle {
   font-weight: 500;
   font-size: 18px;
   line-height: 28px;
   color: rgb(103, 103, 103);
   opacity: 70%;
 }
-
-.left_buttons {
+.application__left-buttons {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   gap: 18px;
 }
-
-.left_rating {
+.application__left-rating {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
 }
-
-.rating_text {
-  padding-top: 5px;
-  color: rgb(51, 65, 85);
+.application__left-grade {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  color: rgba(51, 65, 85, 0.7);
   font-weight: 500;
   font-size: 16px;
   line-height: 24px;
+}
+.application__right {
+  position: relative;
+}
+.application__right-card {
+  right: -222px;
+}
+.application__right-picture {
+  top: 1px;
+  position: relative;
+}
+.application__right-background {
+  position: absolute;
+  z-index: -1;
+  left: 20px;
+  top: -10px;
 }
 
 #rating_stars {
   margin: 0 10px 0 20px;
 }
 
-.box_right {
-  position: relative;
-}
-
 .card {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  width: 329px;
-  height: 90px;
-  position: absolute;
+  max-width: 329px;
+  max-height: 90px;
+  position: relative;
   border-radius: 10px;
   background-color: rgb(255, 255, 255);
   -webkit-box-shadow: -10px 5px 5px rgba(70, 70, 70, 0.05);
           box-shadow: -10px 5px 5px rgba(70, 70, 70, 0.05);
-  padding: 10px 10px 0 10px;
+  padding: 10px;
 }
-
-.right_card {
-  right: -80px;
-  top: -70px;
-}
-
 .card img {
-  width: 74px;
+  max-width: 74px;
   margin-right: 10px;
 }
-
-.card_text {
+.card-text {
   display: block;
   width: 100%;
 }
-
-.card_title {
+.card-title {
   display: block;
   margin-bottom: 10px;
   font-size: 16px;
@@ -253,8 +256,7 @@ purple {
   letter-spacing: 0px;
   text-align: left;
 }
-
-.card_subtitle {
+.card-subtitle {
   display: block;
   margin-bottom: 10px;
   font-size: 10px;
@@ -263,8 +265,7 @@ purple {
   letter-spacing: 0px;
   text-align: left;
 }
-
-.card_time {
+.card-time {
   display: block;
   text-align: end;
   -webkit-box-align: end;
@@ -278,20 +279,12 @@ purple {
   color: rgb(172, 173, 185);
 }
 
-.card_background {
-  position: absolute;
-  z-index: -1;
-  left: 20px;
-  top: -10px;
-}
-
 .features {
   margin-top: 85px;
   background-image: url(/firstProject/images/BG.svg);
   background-size: cover;
   background-repeat: no-repeat;
 }
-
 .features__box {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -304,8 +297,7 @@ purple {
       -ms-flex-align: center;
           align-items: center;
 }
-
-.features_item {
+.features__item {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -316,21 +308,19 @@ purple {
   max-width: 220px;
   gap: 11px;
 }
-.features_item:nth-child(2) {
+.features__item:nth-child(2) {
   border-left: 1px solid rgb(197, 197, 197);
   border-right: 1px solid rgb(197, 197, 197);
   padding: 0 66px;
 }
-
-.features_title {
+.features__item-title {
   font-weight: 700;
   font-size: 43px;
   line-height: 54px;
   text-align: center;
   color: rgb(255, 255, 255);
 }
-
-.features_subtitle {
+.features__item-subtitle {
   font-weight: 500;
   font-size: 15px;
   line-height: 21px;
@@ -338,7 +328,7 @@ purple {
   color: rgb(197, 191, 237);
 }
 
-.application__inner {
+.mobile__inner {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -346,9 +336,12 @@ purple {
       justify-content: space-around;
   padding-bottom: 120px;
   border-bottom: 1px solid rgb(203, 203, 203);
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-top: 116px;
 }
-
-.application_right {
+.mobile__right {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -367,14 +360,12 @@ purple {
   max-width: 500px;
   max-height: 550px;
 }
-
-.application_right_title {
+.mobile__right-title {
   font-weight: 700;
   font-size: 52px;
   line-height: 59px;
 }
-
-.application_right_list {
+.mobile__right-list {
   font-weight: 400;
   font-size: 20px;
   line-height: 30px;
@@ -382,30 +373,26 @@ purple {
   gap: 28px;
   display: grid;
 }
-
-.application_right_more {
+.mobile__right-more {
   position: relative;
   left: -20%;
 }
-
-.application_right_more_vector {
+.mobile__right-more-vector {
   position: relative;
   top: 70%;
-  left: -10%;
+  left: -1%;
 }
 
-.restaurants_header {
+.restaurants__header {
   padding: 100px 0;
   text-align: center;
 }
-
-.header_top {
+.restaurants__header-top {
   font-weight: 600;
   font-size: 45px;
   line-height: 26px;
 }
-
-.restaurants_list {
+.restaurants__list {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -413,8 +400,7 @@ purple {
       -ms-flex-pack: justify;
           justify-content: space-between;
 }
-
-.restaurants_list_item {
+.restaurants__list-item {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -428,13 +414,11 @@ purple {
   background-color: rgb(255, 255, 255);
   border: 1.25px solid rgb(244, 244, 246);
 }
-
-.restaurants_list_item img {
+.restaurants__list-item img {
   max-width: 395px;
   max-height: 195px;
 }
-
-.item_information {
+.restaurants__list-information {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -444,8 +428,7 @@ purple {
           flex-direction: column;
   padding: 10px;
 }
-
-.item_information_highlight {
+.restaurants__list-highlight {
   display: block;
   width: 74.1px;
   height: 24.29px;
@@ -456,18 +439,7 @@ purple {
   letter-spacing: 0px;
   text-align: center;
 }
-
-.healthy {
-  background-color: rgb(255, 236, 187);
-  color: rgb(218, 163, 26);
-}
-
-.trending {
-  background-color: rgb(255, 181, 164);
-  color: rgb(251, 71, 29);
-}
-
-.item_information_name {
+.restaurants__list-name {
   font-size: 26px;
   font-weight: 600;
   line-height: 42px;
@@ -475,8 +447,7 @@ purple {
   text-align: left;
   color: rgb(50, 49, 66);
 }
-
-.item_information_details {
+.restaurants__list-details {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -484,8 +455,7 @@ purple {
       -ms-flex-align: start;
           align-items: flex-start;
 }
-
-.details_time {
+.restaurants__list-time {
   font-size: 19px;
   font-weight: 400;
   line-height: 26px;
@@ -493,14 +463,29 @@ purple {
   text-align: left;
   color: rgb(142, 151, 166);
 }
-
-.details_rating {
+.restaurants__list-rating {
   font-size: 19px;
   font-weight: 400;
   line-height: 26px;
   letter-spacing: 0px;
   text-align: left;
   color: rgb(142, 151, 166);
+}
+.restaurants__bottom {
+  padding-top: 65px;
+  text-align: end;
+  font-size: 20px;
+  font-weight: 500;
+  line-height: 45px;
+  padding-bottom: 120px;
+  border-bottom: 1px solid rgb(203, 203, 203);
+}
+.restaurants__bottom a {
+  text-decoration: none;
+}
+.restaurants__bottom-text {
+  color: rgb(172, 173, 185);
+  text-decoration: none;
 }
 
 .favorite {
@@ -510,25 +495,6 @@ purple {
   left: 200px;
   bottom: 10px;
   background-color: white;
-}
-
-.restaurants_bottom {
-  padding-top: 65px;
-  text-align: end;
-  font-size: 20px;
-  font-weight: 500;
-  line-height: 45px;
-  padding-bottom: 120px;
-  border-bottom: 1px solid rgb(203, 203, 203);
-}
-
-.restaurants_bottom a {
-  text-decoration: none;
-}
-
-.restaurants_bottom_text {
-  color: rgb(172, 173, 185);
-  text-decoration: none;
 }
 
 .dishes {
