--- a/firstProject/css/style.scss
+++ b/firstProject/css/style.scss
@@ -28,56 +28,6 @@ button:hover {
   margin: 0 auto;
 }
 
-.header {
-  position: fixed;
-  top: 0px;
-  padding: 30px 0 25px;
-  width: 100%;
-  border-bottom: 2px solid rgba(203, 203, 203, 1);
-  background-color: rgb(243 243 243);
-  z-index: 9999;
-}
-
-.header__inner {
-  display: flex;
-  justify-content: space-between;
-}
-
-.header__logo {
-  font-weight: 600;
-  display: flex;
-  align-items: center;
-}
-
-.logo-text {
-  padding-left: 11px;
-  font-size: 21px;
-  color: rgba(108, 95, 188, 1);
-}
-
-.header__navigation {
-  display: flex;
-  align-items: center;
-  margin-right: auto;
-  margin-left: 105px;
-  margin-right: 445px;
-}
-
-.header__link {
-  color: inherit;
-  text-decoration: none;
-}
-
-.navigation_buttons {
-  display: flex;
-  flex-direction: row;
-  gap: 30px;
-  color: rgba(96, 96, 96, 1);
-  list-style-type: none;
-  font-size: 18px;
-  padding-left: 30px;
-}
-
 .purpleButton {
   background-color: rgba(108, 95, 188, 1);
   color: rgba(249, 249, 249, 1);
@@ -97,287 +47,6 @@ button:hover {
   border: 1.5px solid rgba(108, 95, 188, 1);
 }
 
-.application {
-  padding-top: 100px;
-}
-
-.section__inner {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  margin-top: 116px;
-}
-
-.box_left {
-  display: flex;
-  flex-direction: column;
-  gap: 50px;
-}
-
-.left_user {
-  display: flex;
-}
-
-.user_text {
-  color: rgba(32, 31, 31, 0.2);
-  font-weight: 600;
-  font-size: 15px;
-  line-height: 18px;
-  letter-spacing: 2px;
-}
-
-.left_content {
-  display: flex;
-  flex-direction: column;
-  gap: 16px;
-  max-width: 567px;
-}
-
-.content_title {
-  font-weight: 600;
-  font-size: 75px;
-  line-height: 90px;
-  letter-spacing: -3px;
-}
-
-purple {
-  color: rgba(92, 78, 174, 1);
-}
-
-.content_subtitle {
-  font-weight: 500;
-  font-size: 18px;
-  line-height: 28px;
-  color: rgba(103, 103, 103, 1);
-  opacity: 70%;
-}
-
-.left_buttons {
-  display: flex;
-  gap: 18px;
-}
-
-.left_rating {
-  display: flex;
-}
-
-.rating_text {
-  padding-top: 5px;
-  color: rgba(51, 65, 85, 1);
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 24px;
-}
-
-#rating_stars {
-  margin: 0 10px 0 20px;
-}
-
-.box_right {
-  position: relative;
-}
-
-.card {
-  display: flex;
-  width: 329px;
-  height: 90px;
-  position: absolute;
-  border-radius: 10px;
-  background-color: rgba(255, 255, 255, 1);
-  box-shadow: -10px 5px 5px rgba(70, 70, 70, 0.05);
-  padding: 10px 10px 0 10px;
-}
-
-.right_card {
-  right: -80px;
-  top: -70px;
-}
-
-.card img {
-  width: 74px;
-  margin-right: 10px;
-}
-
-.card_text {
-  display: block;
-  width: 100%;
-}
-
-.card_title {
-  display: block;
-  margin-bottom: 10px;
-  font-size: 16px;
-  font-weight: 600;
-  line-height: 22px;
-  letter-spacing: 0px;
-  text-align: left;
-}
-
-.card_subtitle {
-  display: block;
-  margin-bottom: 10px;
-  font-size: 10px;
-  font-weight: 500;
-  line-height: 14px;
-  letter-spacing: 0px;
-  text-align: left;
-}
-
-.card_time {
-  display: block;
-  text-align: end;
-  align-items: end;
-  width: auto;
-  font-size: 11px;
-  font-weight: 500;
-  line-height: 15px;
-  letter-spacing: 0px;
-  color: rgba(172, 173, 185, 1);
-}
-
-.card_background {
-  position: absolute;
-  z-index: -1;
-  left: 20px;
-  top: -10px;
-}
-
-.features {
-  margin-top: 85px;
-  background-image: url(/firstProject/images/BG.svg);
-  background-size: cover;
-  background-repeat: no-repeat;
-}
-
-.features__box {
-  display: flex;
-  justify-content: space-evenly;
-
-  height: 220.5px;
-  align-items: center;
-}
-
-.features_item {
-  display: flex;
-  flex-direction: column;
-  max-width: 220px;
-  gap: 11px;
-
-  &:nth-child(2) {
-    border-left: 1px solid rgba(197, 197, 197, 1);
-    border-right: 1px solid rgba(197, 197, 197, 1);
-    padding: 0 66px;
-  }
-}
-
-.features_title {
-  font-weight: 700;
-  font-size: 43px;
-  line-height: 54px;
-  text-align: center;
-  color: rgba(255, 255, 255, 1);
-}
-
-.features_subtitle {
-  font-weight: 500;
-  font-size: 15px;
-  line-height: 21px;
-  text-align: center;
-  color: rgba(197, 191, 237, 1);
-}
-
-.application__inner {
-  display: flex;
-  justify-content: space-around;
-  padding-bottom: 120px;
-  border-bottom: 1px solid rgba(203, 203, 203, 1);
-}
-
-.application_right {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  justify-content: space-around;
-  max-width: 500px;
-  max-height: 550px;
-}
-
-.application_right_title {
-  font-weight: 700;
-  font-size: 52px;
-  line-height: 59px;
-}
-
-.application_right_list {
-  font-weight: 400;
-  font-size: 20px;
-  line-height: 30px;
-  color: rgba(103, 103, 103, 1);
-  gap: 28px;
-  display: grid;
-}
-
-.application_right_more {
-  position: relative;
-  left: -20%;
-}
-
-.application_right_more_vector {
-  position: relative;
-  top: 70%;
-  left: -10%;
-}
-
-.restaurants_header {
-  padding: 100px 0;
-  text-align: center;
-}
-
-.header_top {
-  font-weight: 600;
-  font-size: 45px;
-  line-height: 26px;
-}
-
-.restaurants_list {
-  display: flex;
-  justify-content: space-between;
-}
-
-.restaurants_list_item {
-  display: flex;
-  flex-direction: column;
-  border-radius: 30.02px;
-  border: 1.25px;
-  gap: 10px;
-  background-color: rgba(255, 255, 255, 1);
-  border: 1.25px solid rgba(244, 244, 246, 1);
-}
-
-.restaurants_list_item img {
-  max-width: 395px;
-  max-height: 195px;
-}
-
-.item_information {
-  display: flex;
-  flex-direction: column;
-  padding: 10px;
-}
-
-.item_information_highlight {
-  display: block;
-  width: 74.1px;
-  height: 24.29px;
-  border-radius: 5.4px;
-  font-size: 15px;
-  font-weight: 400;
-  line-height: 19px;
-  letter-spacing: 0px;
-  text-align: center;
-}
-
 .healthy {
   background-color: rgb(255, 236, 187);
   color: rgba(218, 163, 26, 1);
@@ -388,36 +57,395 @@ purple {
   color: rgba(251, 71, 29, 1);
 }
 
-.item_information_name {
-  font-size: 26px;
-  font-weight: 600;
-  line-height: 42px;
-  letter-spacing: 0px;
-  text-align: left;
-  color: rgba(50, 49, 66, 1);
+purple {
+  color: rgba(92, 78, 174, 1);
 }
 
-.item_information_details {
+.header {
+  position: fixed;
+  top: 0px;
+  padding: 30px 0 25px;
+  width: 100%;
+  border-bottom: 2px solid rgba(203, 203, 203, 1);
+  background-color: rgb(243 243 243);
+  z-index: 9999;
+
+  &__inner {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  &__logo {
+    font-weight: 600;
+    display: flex;
+    align-items: center;
+
+    &-text {
+      padding-left: 11px;
+      font-size: 21px;
+      color: rgba(108, 95, 188, 1);
+    }
+  }
+
+  &__navigation {
+    display: flex;
+    align-items: center;
+    margin-right: auto;
+    margin-left: 105px;
+    margin-right: 445px;
+
+    &-buttons {
+      display: flex;
+      flex-direction: row;
+      gap: 30px;
+      color: rgba(96, 96, 96, 1);
+      list-style-type: none;
+      font-size: 18px;
+      padding-left: 30px;
+    }
+  }
+
+  &__link {
+    color: inherit;
+    text-decoration: none;
+  }
+}
+
+.application {
+  padding-top: 100px;
+
+  &__inner {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    margin-top: 116px;
+  }
+
+  &__left {
+    display: flex;
+    flex-direction: column;
+    gap: 50px;
+
+    &-title {
+      display: flex;
+    }
+
+    &-text {
+      color: rgba(32, 31, 31, 0.2);
+      font-weight: 600;
+      font-size: 15px;
+      line-height: 18px;
+      letter-spacing: 2px;
+    }
+
+    &-content {
+      display: flex;
+      flex-direction: column;
+      gap: 16px;
+      max-width: 567px;
+    }
+
+    &-heading {
+      font-weight: 600;
+      font-size: 75px;
+      line-height: 90px;
+      letter-spacing: -3px;
+    }
+
+    &-subtitle {
+      font-weight: 500;
+      font-size: 18px;
+      line-height: 28px;
+      color: rgba(103, 103, 103, 1);
+      opacity: 70%;
+    }
+
+    &-buttons {
+      display: flex;
+      gap: 18px;
+    }
+
+    &-rating {
+      display: flex;
+    }
+
+    &-grade {
+      display: flex;
+      align-items: center;
+      color: rgba(51, 65, 85, 0.7);
+      font-weight: 500;
+      font-size: 16px;
+      line-height: 24px;
+    }
+  }
+
+  &__right {
+    position: relative;
+
+    &-card {
+      right: -222px;
+    }
+
+    &-picture {
+      top: 1px;
+      position: relative;
+    }
+
+    &-background {
+      position: absolute;
+      z-index: -1;
+      left: 20px;
+      top: -10px;
+    }
+  }
+}
+
+#rating_stars {
+  margin: 0 10px 0 20px;
+}
+
+.card {
   display: flex;
-  align-items: flex-start;
+  max-width: 329px;
+  max-height: 90px;
+  position: relative;
+  border-radius: 10px;
+  background-color: rgba(255, 255, 255, 1);
+  box-shadow: -10px 5px 5px rgba(70, 70, 70, 0.05);
+  padding: 10px;
+
+  & img {
+    max-width: 74px;
+    margin-right: 10px;
+  }
+
+  &-text {
+    display: block;
+    width: 100%;
+  }
+
+  &-title {
+    display: block;
+    margin-bottom: 10px;
+    font-size: 16px;
+    font-weight: 600;
+    line-height: 22px;
+    letter-spacing: 0px;
+    text-align: left;
+  }
+
+  &-subtitle {
+    display: block;
+    margin-bottom: 10px;
+    font-size: 10px;
+    font-weight: 500;
+    line-height: 14px;
+    letter-spacing: 0px;
+    text-align: left;
+  }
+
+  &-time {
+    display: block;
+    text-align: end;
+    align-items: end;
+    width: auto;
+    font-size: 11px;
+    font-weight: 500;
+    line-height: 15px;
+    letter-spacing: 0px;
+    color: rgba(172, 173, 185, 1);
+  }
 }
 
-.details_time {
-  font-size: 19px;
-  font-weight: 400;
-  line-height: 26px;
-  letter-spacing: 0px;
-  text-align: left;
-  color: rgba(142, 151, 166, 1);
+.features {
+  margin-top: 85px;
+  background-image: url(/firstProject/images/BG.svg);
+  background-size: cover;
+  background-repeat: no-repeat;
+
+  &__box {
+    display: flex;
+    justify-content: space-evenly;
+    height: 220.5px;
+    align-items: center;
+  }
+
+  &__item {
+    display: flex;
+    flex-direction: column;
+    max-width: 220px;
+    gap: 11px;
+
+    &:nth-child(2) {
+      border-left: 1px solid rgba(197, 197, 197, 1);
+      border-right: 1px solid rgba(197, 197, 197, 1);
+      padding: 0 66px;
+    }
+
+    &-title {
+      font-weight: 700;
+      font-size: 43px;
+      line-height: 54px;
+      text-align: center;
+      color: rgba(255, 255, 255, 1);
+    }
+
+    &-subtitle {
+      font-weight: 500;
+      font-size: 15px;
+      line-height: 21px;
+      text-align: center;
+      color: rgba(197, 191, 237, 1);
+    }
+  }
 }
 
-.details_rating {
-  font-size: 19px;
-  font-weight: 400;
-  line-height: 26px;
-  letter-spacing: 0px;
-  text-align: left;
-  color: rgba(142, 151, 166, 1);
+.mobile {
+  &__inner {
+    display: flex;
+    justify-content: space-around;
+    padding-bottom: 120px;
+    border-bottom: 1px solid rgba(203, 203, 203, 1);
+    align-items: center;
+    margin-top: 116px;
+  }
+
+  &__right {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    justify-content: space-around;
+    max-width: 500px;
+    max-height: 550px;
+
+    &-title {
+      font-weight: 700;
+      font-size: 52px;
+      line-height: 59px;
+    }
+
+    &-list {
+      font-weight: 400;
+      font-size: 20px;
+      line-height: 30px;
+      color: rgba(103, 103, 103, 1);
+      gap: 28px;
+      display: grid;
+    }
+
+    &-more {
+      position: relative;
+      left: -20%;
+
+      &-vector {
+        position: relative;
+        top: 70%;
+        left: -1%;
+      }
+    }
+  }
+}
+
+.restaurants {
+  &__header {
+    padding: 100px 0;
+    text-align: center;
+
+    &-top {
+      font-weight: 600;
+      font-size: 45px;
+      line-height: 26px;
+    }
+  }
+
+  &__list {
+    display: flex;
+    justify-content: space-between;
+
+    &-item {
+      display: flex;
+      flex-direction: column;
+      border-radius: 30.02px;
+      border: 1.25px;
+      gap: 10px;
+      background-color: rgba(255, 255, 255, 1);
+      border: 1.25px solid rgba(244, 244, 246, 1);
+
+      & img {
+        max-width: 395px;
+        max-height: 195px;
+      }
+    }
+
+    &-information {
+      display: flex;
+      flex-direction: column;
+      padding: 10px;
+    }
+
+    &-highlight {
+      display: block;
+      width: 74.1px;
+      height: 24.29px;
+      border-radius: 5.4px;
+      font-size: 15px;
+      font-weight: 400;
+      line-height: 19px;
+      letter-spacing: 0px;
+      text-align: center;
+    }
+
+    &-name {
+      font-size: 26px;
+      font-weight: 600;
+      line-height: 42px;
+      letter-spacing: 0px;
+      text-align: left;
+      color: rgba(50, 49, 66, 1);
+    }
+
+    &-details {
+      display: flex;
+      align-items: flex-start;
+    }
+
+    &-time {
+      font-size: 19px;
+      font-weight: 400;
+      line-height: 26px;
+      letter-spacing: 0px;
+      text-align: left;
+      color: rgba(142, 151, 166, 1);
+    }
+    &-rating {
+      font-size: 19px;
+      font-weight: 400;
+      line-height: 26px;
+      letter-spacing: 0px;
+      text-align: left;
+      color: rgba(142, 151, 166, 1);
+    }
+  }
+
+  &__bottom {
+    padding-top: 65px;
+    text-align: end;
+    font-size: 20px;
+    font-weight: 500;
+    line-height: 45px;
+    padding-bottom: 120px;
+    border-bottom: 1px solid rgba(203, 203, 203, 1);
+
+    & a {
+      text-decoration: none;
+    }
+
+    &-text {
+      color: rgba(172, 173, 185, 1);
+      text-decoration: none;
+    }
+  }
 }
 
 .favorite {
@@ -428,26 +456,6 @@ purple {
   bottom: 10px;
   background-color: white;
 }
-
-.restaurants_bottom {
-  padding-top: 65px;
-  text-align: end;
-  font-size: 20px;
-  font-weight: 500;
-  line-height: 45px;
-  padding-bottom: 120px;
-  border-bottom: 1px solid rgba(203, 203, 203, 1);
-}
-
-.restaurants_bottom a {
-  text-decoration: none;
-}
-
-.restaurants_bottom_text {
-  color: rgba(172, 173, 185, 1);
-  text-decoration: none;
-}
-
 .dishes {
   padding-top: 100px;
 }
